--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </tr>
         <tr>
             
-             <td>CALÇA JEANS</td>
+             <td>Bermuda</td>
              <td>AZUL</td>
              <td>P</td>
              <td>R$ 160,00</td>
