--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <tr>
             <td>CAMISETA</td>
-            <td>PRETA</td>
+            <td>VERMELHA</td>
             <td>M</td>
             <td>R$ 70</td>
             <td>EM ESTOQUE</td>
